# src/models/User.py
@@ -1,14 +1,14 @@
 from main import db
 from sqlalchemy.orm import backref
-from models.Users import Users
+from models.Profile import Profile
 
-class Accounts(db.Model):
-    __tablename__ = "accounts"
+class User(db.Model):
+    __tablename__ = "users"
 
     id = db.Column(db.Integer, primary_key=True)
     email = db.Column(db.String(), nullable=False, unique=True)
     password = db.Column(db.String(), nullable=False)
-    users = db.relationship("Users", backref=backref("accounts", uselist=False))
+    profile = db.relationship("Profile", backref=backref("user", uselist=False))
 
     def __repr__(self):
-        return f"<Account {self.email}>"
+        return f"<Users {self.email}>"
