# src/schemas/ProfileSchema.py
@@ -1,17 +1,16 @@
 from main import ma
-from models.Users import Users
+from models.Profile import Profile
 from marshmallow.validate import Length
-from schemas.AccountsSchema import AccountsSchema
+from schemas.UserSchema import UserSchema
 
-class UsersSchema(ma.SQLAlchemyAutoSchema):
+class ProfileSchema(ma.SQLAlchemyAutoSchema):
     class Meta:
-        model = Users
+        model = Profile
     username = ma.String(required=True, validate=Length(min=1))
     fname = ma.String(required=True, validate=Length(min=1))
     lname = ma.String(required=True, validate=Length(min=1))
-    # profile_pic = ma.String(required=False)
     account_active = ma.Boolean(required=True)
-    account = ma.Nested(AccountsSchema)
+    user = ma.Nested(UserSchema)
 
-user_schema = UsersSchema()
-users_schema = UsersSchema(many=True)
+profile_schema = ProfileSchema()
+profiles_schema = ProfileSchema(many=True)
